# codice-backend

./: .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 02b387b52be0_initial.py  690177626871_add_language_field_to_paste_model.py  7238a6a68a61_make_slug_nullable.py  865fe0c741b8_add_test.py  c5406e235440_test.py  f0246848c51c_add_test.py  f15119db1d2f_remove_test_field.py
app/: constants.py  db.py  main.py
app/core/: models.py
app/pastes/: models.py  router.py  service.py  tests.py
tests/: fixtures.py  test_pastes.py
